Refactor: Improve code simplicity and immutability
- Replaced collect(Collectors.toList()) with toList() for better immutability and simplicity
- Switched to the enhanced switch statement for improved readability and modern Java features